# 2048

./: CMakeLists.txt  main.cpp  test.cpp
include/: constants.h  game.h  label.h  label_test.h  score_field.h  score_field_test.h  square.h  test.h  value_enum.h
src/: game.cpp  label.cpp  score_field.cpp  square.cpp
